--- a/Ecommerce_pyspark_sql_EDA.ipynb
+++ b/Ecommerce_pyspark_sql_EDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4841a99e",
+   "id": "1c544e05",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Configure the logger\n",
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
     "formatter = logging.Formatter(\"%(levelname)s - %(message)s\")\n",
@@ -311,7 +310,7 @@
     "            data_df.plot(kind='bar', x='Country', y='UniqueCustomerNumber')\n",
     "\n",
     "            plt.show()\n",
-    "            time.sleep(3)  # Add a 3-second delay\n",
+    "            time.sleep(3) \n",
     "\n",
     "            logger.info(\"Customers With Highest Orders\")\n",
     "            result_df = self.spark.sql(\"SELECT CustomerID, COUNT(DISTINCT InvoiceNo) as TotalOrderNumber \\\n",
@@ -319,21 +318,20 @@
     "                                        GROUP BY CustomerID \\\n",
     "                                        ORDER BY TotalOrderNumber DESC \\\n",
     "                                        LIMIT 10\")\n",
-    "#             result_df.show()\n",
     "            result_pandas = result_df.toPandas()\n",
     "            result_pandas.plot(kind='bar', x='CustomerID', y='TotalOrderNumber')\n",
     "            plt.title(\"Top 10 Customers with Highest Orders\")\n",
     "            plt.xlabel(\"CustomerID\")\n",
     "            plt.ylabel(\"Total Order Number\")\n",
     "            plt.show()\n",
-    "            time.sleep(3)  # Add a 3-second delay\n",
+    "            time.sleep(3)  \n",
     "\n",
     "            logger.info(\"Distribution of Items Per Order\")\n",
     "            result_df = self.spark.sql(\"SELECT StockCode, COUNT(DISTINCT InvoiceNo) as Invoice_count \\\n",
     "                                        FROM items \\\n",
     "                                        GROUP BY StockCode\")\n",
     "            result_df.show()\n",
-    "            time.sleep(3)  # Add a 3-second delay\n",
+    "            time.sleep(3) \n",
     "\n",
     "            logger.info(\"Most Ordered Items\")\n",
     "            most_ordered_items_df = self.spark.sql(\"SELECT StockCode, Description, SUM(Quantity) AS TotalQuantity \\\n",
@@ -347,8 +345,7 @@
     "            plt.pie(quantities, labels=labels, wedgeprops=dict(width=0.4))\n",
     "            plt.title(\"Most Ordered Items\")\n",
     "            plt.show()\n",
-    "#             most_ordered_items_df.show()\n",
-    "            time.sleep(3)  # Add a 3-second delay\n",
+    "            time.sleep(3)  \n",
     "\n",
     "            logger.info(\"Price Distribution Per Item\")\n",
     "            price_df = self.spark.sql(\"SELECT UnitPrice \\\n",
@@ -356,7 +353,7 @@
     "                                       GROUP BY StockCode, Description, UnitPrice\")\n",
     "            price_df.describe().show()\n",
     "            price_df.select('UnitPrice')\n",
-    "            time.sleep(3)  # Add a 3-second delay\n",
+    "            time.sleep(3)  \n",
     "\n",
     "            logger.info(\"Filtering customers who bought a WHITE METAL LANTERN?\")\n",
     "            customers_bought_lantern = self.spark.sql(\"\"\"\n",
@@ -367,7 +364,7 @@
     "            AND invoices.CustomerID IS NOT NULL\n",
     "            \"\"\")\n",
     "            customers_bought_lantern.show()\n",
-    "            time.sleep(5)  # Add a 3-second delay\n",
+    "            time.sleep(5)  \n",
     "\n",
     "            logger.info(\"Most Revenue Generating Items by Country outside UK\")\n",
     "            revenue_per_country = self.spark.sql(\"\"\"\n",
@@ -380,7 +377,7 @@
     "            \"\"\")\n",
     "           \n",
     "            revenue_per_country.show()\n",
-    "            time.sleep(10)  # Add a 3-second delay\n",
+    "            time.sleep(10)  \n",
     "\n",
     "            logger.info(\"Most Revenue Generating Items by Country in UK\")\n",
     "            revenue_per_uk = self.spark.sql(\"\"\"\n",
@@ -412,7 +409,6 @@
     "if not file_exists:\n",
     "    # Copy file from local to HDFS\n",
     "    data_operator.copy_file_to_hdfs(\"/home/itv001290/pyspark/SparkDF/ecommerce.csv\", hdfs_file_path)\n",
-    "    # Wait for 3 seconds\n",
     "    time.sleep(3)\n",
     "\n",
     "# Process data\n",
@@ -422,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70b0cb7",
+   "id": "8f7575e7",
    "metadata": {},
    "outputs": [],
    "source": []
