reformatted sql scripts

--- a/SQL_solutions.ipynb
+++ b/SQL_solutions.ipynb
@@ -43,7 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Question - All patients who have gone through admissions, can see their medical documents on our site. Those patients are given a temporary password after their first admission. Show the patient_id and temp_password.\n",
+    "Question - All patients who have gone through admissions, can see their medical documents on our site. 
+Those patients are given a temporary password after their first admission. 
+Show the patient_id and temp_password.\n",
     "\n",
     "The password must be the following, in order:\n",
     "1. patient_id\n",
@@ -66,7 +68,8 @@
     "                        year(birth_date) as yb,\n",
     "                        p.patient_id,\n",
     "                        admission_date,\n",
-    "                        dense_rank() over(partition by first_name,last_name order by admission_date desc) as admission_count \n",
+    "                        dense_rank() over(partition by first_name,last_name 
+                            order by admission_date desc) as admission_count \n",
     "                        from patients p \n",
     "                        inner join admissions a on p.patient_id = a.patient_id ) \n",
     "select distinct patient_id,\n",
@@ -87,7 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Question - For each day display the total amount of admissions on that day. Display the amount changed from the previous date."
+    "Question - For each day display the total amount of admissions on that day. 
+     Display the amount changed from the previous date."
    ]
   },
   {
@@ -100,7 +104,8 @@
     "Solution:- \n",
     "SELECT admission_date, \n",
     "       COUNT(*) AS admission_day, \n",
-    "       COUNT(admission_date) - LAG(COUNT(admission_date)) OVER (ORDER BY admission_date) AS admission_count_change\n",
+    "       COUNT(admission_date) - LAG(COUNT(admission_date)) 
+            OVER (ORDER BY admission_date) AS admission_count_change\n",
     "FROM admissions\n",
     "GROUP BY admission_date\n",
     "ORDER BY admission_date;"
@@ -137,7 +142,8 @@
     "                        FROM province_names p1 left join patients p2 \n",
     "                        on p1.province_id = p2.province_id \n",
     "                          where gender in ('M','F')) \n",
-    "    select *, dense_rank() over ( partition by province_name order by province_count desc) province_filter from temp_results ) \n",
+    "    select *, dense_rank() over ( partition by province_name order by province_count desc) province_filter 
+                                        from temp_results ) \n",
     "select province_name from province_cte \n",
     "where province_filter = 1 and gender = 'M'\n"
    ]
