--- a/SQL_solutions.ipynb
+++ b/SQL_solutions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13cf6460",
+   "id": "10026691",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c1fef11",
+   "id": "40c09735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aed68e4",
+   "id": "3667d980",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,13 +39,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e39b400",
+   "id": "742863bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Question - All patients who have gone through admissions, can see their medical documents on our site. 
-Those patients are given a temporary password after their first admission. 
-Show the patient_id and temp_password.\n",
+    "Question - All patients who have gone through admissions, can see their medical documents on our site. \n",
+    "Those patients are given a temporary password after their first admission. Show the patient_id and temp_password.\n",
     "\n",
     "The password must be the following, in order:\n",
     "1. patient_id\n",
@@ -56,7 +55,7 @@ Show the patient_id and temp_password.\n",
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34be6deb",
+   "id": "6dee3792",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +67,8 @@ Show the patient_id and temp_password.\n",
     "                        year(birth_date) as yb,\n",
     "                        p.patient_id,\n",
     "                        admission_date,\n",
-    "                        dense_rank() over(partition by first_name,last_name 
-                            order by admission_date desc) as admission_count \n",
+    "                        dense_rank() over(partition by first_name,last_name \n",
+    "                                          order by admission_date desc) as admission_count \n",
     "                        from patients p \n",
     "                        inner join admissions a on p.patient_id = a.patient_id ) \n",
     "select distinct patient_id,\n",
@@ -79,33 +78,33 @@ Show the patient_id and temp_password.\n",
   },
   {
    "cell_type": "markdown",
-   "id": "9ce5ddbe",
+   "id": "23b07ca7",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ee42c5",
+   "id": "476d93f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Question - For each day display the total amount of admissions on that day. 
-     Display the amount changed from the previous date."
+    "Question - For each day display the total amount of admissions on that day. \n",
+    "Display the amount changed from the previous date."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f96bfcc",
+   "id": "0118de03",
    "metadata": {},
    "outputs": [],
    "source": [
     "Solution:- \n",
     "SELECT admission_date, \n",
     "       COUNT(*) AS admission_day, \n",
-    "       COUNT(admission_date) - LAG(COUNT(admission_date)) 
-            OVER (ORDER BY admission_date) AS admission_count_change\n",
+    "       COUNT(admission_date) - LAG(COUNT(admission_date)) OVER (ORDER BY admission_date) \n",
+    "       AS admission_count_change\n",
     "FROM admissions\n",
     "GROUP BY admission_date\n",
     "ORDER BY admission_date;"
@@ -113,24 +112,25 @@ Show the patient_id and temp_password.\n",
   },
   {
    "cell_type": "markdown",
-   "id": "ee2edf2a",
+   "id": "b195e94e",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49645488",
+   "id": "2c8b8e06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Question - Show the provinces that has more patients identified as 'M' than 'F'. Must only show full province_name"
+    "Question - Show the provinces that has more patients identified as 'M' than 'F'.\n",
+    "Must only show full province_name"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c019ee83",
+   "id": "c8cbf749",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,26 +138,27 @@ Show the patient_id and temp_password.\n",
     "with province_cte as (\n",
     "    with temp_results as ( SELECT distinct \n",
     "                          province_name,gender, \n",
-    "                        count(gender) over (partition by province_name,gender) as province_count \n",
+    "                        count(gender) over (partition by province_name,gender) \n",
+    "                          as province_count \n",
     "                        FROM province_names p1 left join patients p2 \n",
     "                        on p1.province_id = p2.province_id \n",
     "                          where gender in ('M','F')) \n",
-    "    select *, dense_rank() over ( partition by province_name order by province_count desc) province_filter 
-                                        from temp_results ) \n",
+    "    select *, dense_rank() over ( partition by province_name order by province_count desc) \n",
+    "    province_filter from temp_results ) \n",
     "select province_name from province_cte \n",
     "where province_filter = 1 and gender = 'M'\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ceb7234c",
+   "id": "b7f40366",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f702b3e",
+   "id": "43c8819e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +168,7 @@ Show the patient_id and temp_password.\n",
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2226b071",
+   "id": "ba1c358b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +181,14 @@ Show the patient_id and temp_password.\n",
   },
   {
    "cell_type": "markdown",
-   "id": "add3af35",
+   "id": "5337b152",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7346e694",
+   "id": "23167ee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@ Show the patient_id and temp_password.\n",
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d67e470",
+   "id": "da67f319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +212,7 @@ Show the patient_id and temp_password.\n",
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c320f70",
+   "id": "aa7f792c",
    "metadata": {},
    "outputs": [],
    "source": [
